# chikin_airdrop_pool

./: .gitignore  README.md
client_dart/: README.md  pubspec.yaml
client_dart/lib/: chikin_airdrop_pool_client.dart
client_dart/lib/src/: client.dart  command.dart  config.dart  model.dart  utils.dart
client_dart/test/: chikin_airdrop_pool_client_test.dart  test_claim.dart  test_get_id.dart
client_dart/test/utils/: test_claimer.dart  test_token.dart  test_utils.dart
client_js/: README.md  package.json
client_js/src/: index.ts
client_js/test/: test.ts
client_js/test/util/: new-account-with-lamports.ts
client_rust/: Cargo.toml
client_rust/src/: client.rs  command.rs  config.rs  error.rs  lib.rs  main.rs
client_rust/tests/: release_initialize.rs  test_get_id.rs  test_initialize.rs  test_initialize_and_claim.rs  test_initialize_claim_twice.rs  test_initialize_twice.rs
client_rust/tests/testutil/: mod.rs  test_token.rs
program/: Cargo.toml
program/src/: config.rs  entrypoint.rs  error.rs  instruction.rs  lib.rs  packable.rs  processor.rs  state.rs  utils.rs
program/tests/: test_claim.rs  test_initialize.rs  test_packed_size.rs  testutils.rs
