[package]
name = "client_rust"
version = "0.1.0"
authors = ["A smart chikin <chikindeveloper@protonmail.com>"]
edition = "2018"

[dependencies]
borsh = "0.8"
clap = "2.33.3"
serde_json = "1.0.62"
solana-account-decoder = "1.7.4"
solana-clap-utils = "1.7.4"
solana-cli-config = "1.7.4"
solana-client = "1.7.4"
solana-logger = "1.7.4"
solana-sdk = "1.7.4"
solana-program = "1.7.4"
bs58 = "0.4.0"
bincode = "1.3.1"
lazy_static = "1.4.0"
spl-associated-token-account = { version = "1.0", features = [ "no-entrypoint" ] }
spl-token = { version = "3.1", features = [ "no-entrypoint" ]  }
chikin-airdrop-pool = { path="../program", features = [ "no-entrypoint" ] }

[dev-dependencies]
solana-program-test = "=1.7.4"
solana-sdk = "=1.7.4"