[package]
name = "chikin-airdrop-pool"
version = "0.0.1"
description = "Example template program written in Rust"
authors = ["Many chikins <chikindeveloper@protonmail.com>"]
license = "Apache-2.0"
homepage = "https://chikin.run/"

[features]
test-bpf = []
no-entrypoint = []

[dependencies]
borsh = "0.7.1"
borsh-derive = "0.8.1"
solana-program = "1.6"
spl-token = { version = "3.1", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version = "1.0", features = [ "no-entrypoint" ] }
num-traits = "0.2"
num-derive = "0.3"
thiserror = "1.0"

[dev-dependencies]
solana-program-test = "=1.6"
solana-sdk = "=1.6"

[lib]
name = "chikin_airdrop_pool"
crate-type = ["cdylib", "lib"]
